--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,28 @@
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
+        
   </head>
   <body>
+
+    <!-- =================== FORM ====================== -->
+
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
+
+    <!-- ================== GALLERY ===================== -->
+
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+    <div class="scroll-guard"></div>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+    </body>
 </html>
